Use List.of instead of asList